--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@lottiefiles/dotlottie-react": "^0.11.0",
     "react": "^18.3.1",
-    "react-Animate-cursor": "^2.11.2",
+    "react-animated-cursor": "^2.11.2",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.0.2"
